Fix: rename duplicate step name in destroy workflow
- Renamed second 'Force unlock state' step to 'Cleanup AWS resources'
- Prevents YAML parsing error in GitHub Actions workflow

--- a/.github/workflows/phase-2-eks.yml
+++ b/.github/workflows/phase-2-eks.yml
@@ -411,7 +411,7 @@ jobs:
           
           echo "✓ Kubernetes resources cleaned up"
 
-      - name: Force unlock state (if locked)
+      - name: Cleanup AWS resources
         run: |
           echo "Cleaning up remaining AWS resources..."
           
