fix: Phase 3 workflow improvements and Phase 2 simplification
- Phase 3: Only trigger on app/** changes (not infrastructure/docs)
- Phase 3: Add imagePullPolicy: Always for pod image updates
- Phase 3: Add kubectl rollout restart to force pod restart after Helm upgrade
- Phase 2: Remove nginx test deployment (simplify to infrastructure only)
- Phase 2: Remove Load Balancer Controller installation from Phase 3 (already in Phase 2)
- Helm: Add RollingUpdate strategy for zero-downtime deployments
- Helm: Add deployment strategy annotations for pod restart tracking

Fixes:
- Workflow no longer triggers on infrastructure/docs changes (saves CI/CD resources)
- Updated app code now deploys successfully to EKS (pods restart with new image)
- Eliminated duplication between Phase 2 and Phase 3 workflows
- Cleaner separation of concerns (Phase 2 = infrastructure, Phase 3 = application)

--- a/.github/workflows/phase-3-deploy-app.yml
+++ b/.github/workflows/phase-3-deploy-app.yml
@@ -8,17 +8,16 @@ on:
       - main
     tags:
       - 'v*'
-    paths-ignore:
-      - 'terraform/**'
-      - '.github/workflows/terraform.yml'
+    paths:
+      - 'app/**'
+      - '.github/workflows/phase-3-deploy-app.yml'
   pull_request:
     branches:
       - develop
       - stage
       - main
-    paths-ignore:
-      - 'terraform/**'
-      - '.github/workflows/terraform.yml'
+    paths:
+      - 'app/**'
   workflow_dispatch:
 
 env:
@@ -324,39 +323,6 @@ jobs:
             --region ${{ env.AWS_REGION }} \
             --name devops-aws-java-cluster
 
-      - name: Install AWS Load Balancer Controller
-        run: |
-          echo "Installing AWS Load Balancer Controller..."
-          
-          # Get the Load Balancer Controller role ARN
-          ROLE_ARN=$(aws iam list-roles --query "Roles[?RoleName=='devops-aws-java-cluster-load-balancer-controller-role'].Arn" --output text)
-          
-          if [ -z "$ROLE_ARN" ]; then
-            echo "⚠ Load Balancer Controller role not found, skipping installation"
-            exit 0
-          fi
-          
-          echo "Using role: $ROLE_ARN"
-          
-          # Create service account with IRSA annotation
-          kubectl delete serviceaccount -n kube-system aws-load-balancer-controller --ignore-not-found=true
-          kubectl create serviceaccount -n kube-system aws-load-balancer-controller
-          kubectl annotate serviceaccount -n kube-system aws-load-balancer-controller \
-            eks.amazonaws.com/role-arn=$ROLE_ARN --overwrite
-          
-          # Add Helm repo and deploy
-          helm repo add eks https://aws.github.io/eks-charts
-          helm repo update eks
-          
-          helm upgrade --install aws-load-balancer-controller eks/aws-load-balancer-controller \
-            -n kube-system \
-            --set clusterName=devops-aws-java-cluster \
-            --set serviceAccount.create=false \
-            --set serviceAccount.name=aws-load-balancer-controller \
-            --timeout 10m || echo "⚠ Load Balancer Controller installation failed, continuing with basic LoadBalancer"
-          
-          echo "✓ Load Balancer Controller deployment attempted"
-
       - name: Deploy with Helm
         run: |
           echo "Creating ECR image pull secret..."
@@ -377,7 +343,13 @@ jobs:
           echo "Waiting for deployment to be ready..."
           kubectl rollout status deployment/microservice --timeout=10m || true
           
-          echo "Helm deployment completed"
+          echo "Forcing pod restart to pick up new image..."
+          kubectl rollout restart deployment/microservice -n default
+          
+          echo "Waiting for pods to restart..."
+          kubectl rollout status deployment/microservice --timeout=5m || true
+          
+          echo "✓ Helm deployment completed and pods restarted"
 
       - name: Verify deployment
         run: |
