--- a/infrastructure/helm/microservice/values.yaml
+++ b/infrastructure/helm/microservice/values.yaml
@@ -1,11 +1,17 @@
 # Default values for microservice
 replicaCount: 2
 
+deploymentStrategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 0
+
 image:
   registry: ""  # Set via --set during helm install
   repository: devops-aws-java
   tag: latest
-  pullPolicy: IfNotPresent
+  pullPolicy: Always  # Force pull on every pod start
 
 nameOverride: ""
 fullnameOverride: ""
